@@ -2,6 +2,16 @@
 Version 1.6.11
 *******************************************************************************
 
+2010-12-18 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>
+
+	SF Tracker: Patches
+	Fedora mingw32 compilation - ID: 3138849
+	Details:
+	Hello. I trying compile libupnp-1.6.10 on the Fedora 14 MinGW
+	Environment and get many errors. I create patch to fix it. With this
+	patch i can get static library. This patch is very raw.
+
+	Submitted: Ivan Romanov (ivanromanov) - 2010-12-16 23:29:19 UTC
 
 *******************************************************************************
 Version 1.6.10
